src/content/docs/zh/sdk/unity/v4/features/ad-revenue.mdx
---
title: "记录广告收入信息"
description: "使用 Adjust SDK 记录受支持渠道合作伙伴的广告收入信息。"
slug: "en/sdk/unity/v4/features/ad-revenue"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/unity/features/ad-revenue"
---
您可以使用 Adjust SDK 记录[受支持渠道合作伙伴](https://help.adjust.com/en/article/ad-revenue)的广告收入。
<callout type="important"> 

要监测收入，您需要在 Adjust 控制面板中进行一些额外设置步骤。请联系您的技术客户经理或发送邮件至 [support@adjust.com](mailto:support@adjust.com) 来开始设置。
</Callout> 

实例化 AdjustAdRevenue 对象\{\#instantiate\-an\-adjustadrevenue\-object\}
--------------------------------------------------------------------------

<codeblock title="方法签名"> 

```cs
public AdjustAdRevenue(string source)
```

</CodeBlock> 

要使用 Adjust SDK 发送广告收入信息，请实例化一个 `AdjustAdRevenue` 对象。该对象中包含的变量会在应用中记录到广告收入时被发送给 Adjust。

要实例化广告收入对象，请创建新的 `AdjustAdRevenue` 实例，并传送下列参数：

* `source` \(`string`\)：广告收入来源。请查看下表，了解来源。

|                          参数                          |        来源         |
|------------------------------------------------------|-------------------|
| `AdjustConfig.AdjustAdRevenueSourceAppLovinMAX`      | AppLovin MAX      |
| `AdjustConfig.AdjustAdRevenueSourceMopub`            | mopub             |
| `AdjustConfig.AdjustAdRevenueSourceAdMob`            | AdMob             |
| `AdjustConfig.AdjustAdRevenueSourceIronSource`       | IronSource        |
| `AdjustConfig.AdjustAdRevenueSourceAdmost`           | Admost            |
| `AdjustConfig.AdjustAdRevenueSourceUnity`            | Unity             |
| `AdjustConfig.AdjustAdRevenueSourceHeliumChartboost` | Helium Chartboost |
| `AdjustConfig.AdjustAdRevenueSourceAdx`              | Ad\(X\)         |
| `AdjustConfig.AdjustAdRevenueSourceTradPlus`         | TradPlus          |
| `AdjustConfig.AdjustAdRevenueSourceTopOn`            | TopOn             |
| `AdjustConfig.AdjustAdRevenueSourcePublisher`        | 通用来源              |

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
Adjust.trackAdRevenue(adjustAdRevenue);
```

发送广告收入\{\#send\-ad\-revenue\}
----------------------------------

<codeblock title="方法签名"> 

```cs
public static void trackAdRevenue(AdjustAdRevenue adRevenue);
```

</CodeBlock> 

要向 Adjust 发送广告收入数据，请以广告收入实例作为参数，调用 `trackAdRevenue` 方法。

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
Adjust.trackAdRevenue(adjustAdRevenue);
```

记录广告收入额\{\#record\-ad\-revenue\-amount\}
----------------------------------------------

<codeblock title="方法签名"> 

```cs
public void setRevenue(double amount, string currency);
```

</CodeBlock> 

要发送广告收入额，请调用 `setRevenue` 方法，并传送下列参数：

* `revenue` \(`double`\)：收入额
* `currency` \(`string`\)：您报告币种的 [ISO 4217 代码](https://www.iban.com/currency-codes)，由 3 个字符组成

<callout type="seealso"> 

欢迎查看[记录不同币种的购买](https://help.adjust.com/en/article/currency-conversion)一文，了解更多信息。
</Callout> 

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.setRevenue(1.00, "EUR");
//...
Adjust.trackAdRevenue(adjustAdRevenue);
```

记录广告推广活动细节\{\#record\-ad\-campaign\-details\}
---------------------------------------------------

`AdjustAdRevenue` 类包含多种属性，您可以通过这些属性来报告广告推广活动信息。

### 广告展示\{\#ad\-impressions\}

<codeblock title="方法签名"> 

```cs
public void setAdImpressionsCount(int adImpressionsCount);
```

</CodeBlock> 

要发送广告展示量记录，请调用 `setAdImpressionsCount` 方法，并传送下列参数：

* `adImpressionsCount` \(`int`\)：广告展示数量。

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.setAdImpressionsCount(10);
//...
Adjust.trackAdRevenue(adjustAdRevenue);
```

### 广告收入渠道\{\#ad\-revenue\-network\}

<codeblock title="方法签名"> 

```cs
public void setAdRevenueNetwork(string adRevenueNetwork);
```

</CodeBlock> 

要发送广告收入渠道，请调用 `setAdRevenueNetwork` 方法，并传送下列参数：

* `adRevenueNetwork` \(`string`\)：渠道名称

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.setAdRevenueNetwork("network1");
//...
Adjust.trackAdRevenue(adjustAdRevenue);
```

### 广告收入单元\{\#ad\-revenue\-unit\}

<codeblock title="方法签名"> 

```cs
public void setAdRevenueUnit(string adRevenueUnit);
```

</CodeBlock> 

要发送广告收入单位，请调用 `setAdRevenueUnit` 方法，并传送下列参数：

* `adRevenueUnit` \(`string`\)：广告单位

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.setAdRevenueUnit("unit1");
//...
Adjust.trackAdRevenue(adjustAdRevenue);
```

### 广告收入位置\{\#ad\-revenue\-placement\}

<codeblock title="方法签名"> 

```cs
public void setAdRevenuePlacement(string adRevenuePlacement);
```

</CodeBlock> 

要发送广告收入位置，请调用 `setAdRevenuePlacement` 方法，并传送下列参数：

* `adRevenuePlacement` \(`string`\)：广告位

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.setAdRevenuePlacement("banner");
//...
Adjust.trackAdRevenue(adjustAdRevenue);
```

添加回传参数\{\#add\-callback\-parameters\}
------------------------------------------

```cs
public void addCallbackParameter(string key, string value);
```

您在 Adjust 控制面板中[注册回传 URL](https://help.adjust.com/en/article/recommended-placeholders-callbacks)，SDK 监测到事件后，会向您的回传 URL 发送一个 GET 请求。

您可以为自己的服务器设置回传参数。配置好事件的参数后，SDK 会将参数附加至[您的回传 URL](https://help.adjust.com/en/article/raw-data-exports)。您可以利用该信息，通过自己的 BI 系统分析用户应用内行为。

使用 `string` 键值对 argument 调用`addCallbackParameter`方法，以此向事件添加回传参数。多次调用该方法可添加多个参数。

Adjust SDK 监测事件，并向附加回传参数的 URL 发送请求。例如，如果您注册了 URL`https://www.mydomain.com/callback`，则回传为：
<codeblock highlight="key=value, foo=bar"> 

```http
https://www.mydomain.com/callback?key=value&foo=bar
```

</CodeBlock> <callout type="note"> 

Adjust 不会存储您的自定义回传参数。自定义回传参数只会附加在您的回传 URL 中。
</Callout> 

如果您使用的是 CSV 上传，请务必在 CSV 定义中添加参数。

Adjust 支持许多占位符，这些占位符可用来将信息从 SDK 发送至您的 URL。例如，iOS 的`{idfa}`占位符和安卓的`{gps_adid}`占位符。`{publisher_parameter}`占位符可在单一字符串中呈现所有回传参数。
<callout type="seealso"> 

若想进一步了解 URL 回传，查看可用参数的完整列表，请参阅[回传指南](https://help.adjust.com/en/article/callbacks)。
</Callout> 

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.addCallbackParameter("key", "value");
//...
Adjust.trackAdRevenue(adjustAdRevenue);
```

添加合作伙伴参数\{\#add\-partner\-parameters\}
-------------------------------------------

```cs
public void addPartnerParameter(string key, string value);
```

您可以添加[合作伙伴参数](https://help.adjust.com/en/article/data-sharing-ad-network#map-parameters)，向渠道合作伙伴发送额外的信息。

Adjust 可向您设置的[外部合作伙伴](https://help.adjust.com/en/article/integrated-partners)发送合作伙伴参数。这些信息可用来进行更精细的数据分析，开展再营销活动。您设置好参数并为合作伙伴启用参数转发后，Adjust 服务器就会将这些参数转发给合作伙伴。

使用 `string` 键值对 argument 调用`addPartnerParameter`方法，以此向事件添加合作伙伴参数。多次调用该方法可添加多个参数。

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.addPartnerParameter("key", "value");
//...
Adjust.trackAdRevenue(adjustAdRevenue);
```

示例 \{\#example\}
-------------------

该示例展示了如何设置并记录一个广告收入对象，其属性如下：

* AppLovin MAX 作为收入来源
* 收入金额为 1 欧元
* 10 次广告展示
* *`"network1"`* 为广告收入渠道
* *`"unit1"`* 为广告收入单位
* *`"banner"`* 为广告收入位置
* 回传参数： `"key1" = "value1"`
* 合作伙伴参数： `"key2" = "value2"`

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue(AdjustConfig.AdjustAdRevenueSourceAppLovinMAX);
adjustAdRevenue.setRevenue(1.00, "EUR");
adjustAdRevenue.setAdImpressionsCount(10);
adjustAdRevenue.setAdRevenueNetwork("network1");
adjustAdRevenue.setAdRevenueUnit("unit1");
adjustAdRevenue.setAdRevenuePlacement("banner");
adjustAdRevenue.addCallbackParameter("key1", "value1");
adjustAdRevenue.addPartnerParameter("key2", "value2");
Adjust.trackAdRevenue(adjustAdRevenue);
```

